--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ ul {
   flex-direction:column;
   justify-content: space-between;
   border-left: 5px solid #d79921 ;
-  height: 70%;
+  height: 30vh;
 }
 ul.aside > * > * > *{
   width:2.5rem;
@@ -109,7 +109,6 @@ main {
   justify-content: space-between;
 }
 aside {
-
   flex-direction: column;
   justify-content: center;
 }
